# serializer version: 1
# name: test_version_field_surface_matches_snapshot[1.0.0][search_weather@1.0.0]
  dict({
    'city': "<class 'str'>",
    'kind': "typing.Literal['search_weather']",
    'temperature': "<class 'float'>",
    'units': "<class 'str'>",
    'version': "<class 'str'>",
  })
# ---
# name: test_version_field_surface_matches_snapshot[2.0.0][search_weather@2.0.0]
  dict({
    'city': "<class 'str'>",
    'humidity': "<class 'int'>",
    'kind': "typing.Literal['search_weather']",
    'temperature': "<class 'float'>",
    'units': "<class 'str'>",
    'version': "<class 'str'>",
  })
# ---
# name: test_version_field_surface_matches_snapshot[3.0.0][search_weather@3.0.0]
  dict({
    'city': "<class 'str'>",
    'humidity': "<class 'int'>",
    'kind': "typing.Literal['search_weather']",
    'temperature': "<class 'float'>",
    'units': "<class 'str'>",
    'version': "typing.Literal['3.0.0']",
    'wind': "<class 'float'>",
  })
# ---
